<resources>
    <string name="app_name">Women</string>
    <string name="title_activity_mapear_delegacia">Map</string>
    <string name="denunciar">denunciar</string>
    <string name="consultar">consultar</string>
    <string name="alertar">alertar</string>
    <string name="mapear">mapear</string>
    <string name="atualizar_conta">Atualizar conta</string>
    <string name="deletar_conta">Deletar conta</string>
    <string name="sair_da_conta">Sair</string>
    <string name="content_description_end_icon">name1</string>
    <string name="Senha">senha</string>
    <string name="logo">logo</string>
    <string name="mudar_senha">Mudar Senha</string>
    <string name="ligar180">Ligar 180</string>
    <string name="enviarMensagem">enviar mensagem</string>
    <string name="Cep">cep</string>
    <string name="Endereço">endereco</string>
</resources>
